refactor: Remove warnings from WireMockApp